Many to many realtionship (#2)
* many to many, not working :(

* mutable set for fixture classes

* fix many-to-many relationship

* no need to override methods

* cleanup
