# src/main/java/com/library/rest/RequestMapper.java
@@ -1,7 +1,10 @@
 package com.library.rest;
 
+import com.library.author.Author;
 import com.library.book.Book;
+import com.library.openapi.model.AuthorPostObject;
 import com.library.openapi.model.BookObject;
+import com.library.openapi.model.BookPostObject;
 import com.library.openapi.model.FindBooks200Response;
 import java.util.List;
 import org.mapstruct.Mapper;
@@ -15,4 +18,8 @@ public interface RequestMapper {
   }
 
   BookObject toDto(Book book);
+
+  Book toDomain(BookPostObject bookPostObject);
+
+  Author toDomain(AuthorPostObject authorPostObject);
 }
